[gd_scene load_steps=3 format=3 uid="uid://bgcpn52rk3b4e"]

[ext_resource type="Script" uid="uid://b402d1su1yx04" path="res://source/ui/pause_menu.gd" id="1_5vpx4"]
[ext_resource type="StyleBox" uid="uid://bmln1elnj0h8" path="res://resources/style_blueish.tres" id="1_pseub"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5vpx4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2509804)

[node name="Box" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.65
anchor_bottom = 0.85

[node name="ColorRect" type="ColorRect" parent="Box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2625, 0.2916667, 0.35, 1)

[node name="MarginContainer" type="MarginContainer" parent="Box"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Box/MarginContainer"]
layout_mode = 2

[node name="Title" type="Control" parent="Box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="Box/MarginContainer/VBoxContainer/Title"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="Box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("1_pseub")
text = "Resume"

[node name="SaveButton" type="Button" parent="Box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("1_pseub")
text = "Save Game"

[node name="QuitButton" type="Button" parent="Box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("1_pseub")
text = "Quit"

[node name="SaveAndQuitButton" type="Button" parent="Box/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("1_pseub")
text = "Save & Quit"

[connection signal="pressed" from="Box/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Box/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Box/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Box/MarginContainer/VBoxContainer/SaveAndQuitButton" to="." method="_on_save_and_quit_button_pressed"]
